--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "qsymm" %}
-{% set version = "1.3.0" %}
+{% set version = "1.4.0" %}
 
 package:
   name: {{ name|lower }}
@@ -7,7 +7,7 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: ce72945b4d88b453b6d5ca2d222ffbf59b4adc38b32af5e601ca7321a550dbef
+  sha256: 3920e49207f597cb41706b97a15e832c342ebbbfc3d0e20207cd7318ad205221
 
 build:
   noarch: python
@@ -20,11 +20,11 @@ requirements:
     - python >=3.7
     - pytest-runner
   run:
-    - numpy >=1.16
+    - numpy >=1.16.2
     - python >=3.7
     - scipy >=1.1
     - sympy >=1.3
-    - tinyarray
+    - tinyarray >=1.2.2
 
 test:
   requires:
